Fix widget alignment issues

--- a/src/widget/widget-styles.css
+++ b/src/widget/widget-styles.css
@@ -10,6 +10,9 @@ div[data-culmas-widget-instance="true"].culmas-widget-container,
   color: rgb(14, 17, 47);
   background-color: rgb(255, 255, 255);
   
+  /* Default widget container padding */
+  padding: 1rem;
+  
   /* Webflow compatibility improvements with higher specificity */
   position: relative;
   z-index: 999;
